fixed weird spacing issue on header #925

--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -111,7 +111,7 @@ body {
             justify-content: flex-end;
 
             .icon {
-              margin: 0;
+              margin: 0 5px;
             }
           }
         }
